<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icon_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/icon_inventory"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_auctions"
        android:icon="@drawable/icon_auctions"
        android:title="@string/title_auctions" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icon_notifications"
        android:title="@string/title_notifications" />

</menu>


<!--

Trade
Buying
Selling
Inventory


-->